UI refinements done with all html pages

--- a/html/about.html
+++ b/html/about.html
@@ -13,9 +13,9 @@
     <script type="text/javascript" src="../js/eventsManager.js">
 </script>
     <script type="text/javascript" src="../js/lunar1.js">
-</script>
-<!--<script type="text/javascript" src="../js/weather.js">-->
+</script><!--<script type="text/javascript" src="../js/weather.js">-->
     <!--</script>-->
+
     <script type="text/javascript" src="../js/jquery.js">
 </script>
     <script type="text/javascript" src="../js/hide.js">
@@ -33,36 +33,38 @@
         <div id="tagline">
             <p><strong>关于本站</strong></p>
         </div>
-
-
     </div><!-- end of header -->
 
     <div id="wecando" class="shadow">
         <ul>
             <li><a href="../index.html">首页</a></li>
+
             <li><a href="surfing.html">站点导航</a></li>
+
             <li><a href="resources.html">文档资料</a></li>
+
             <li><a href="images.html">美图收藏</a></li>
+
             <li><a href="music.html">OGG音乐</a></li>
+
             <li><a href="#releasenoteshead" class="focus">关于</a></li>
         </ul>
     </div><!-- end of wecando -->
+
     <div id="maincontainer">
         <div id="sidebar">
             <div id="timer">
                 <!-- show current time -->
-            </div>
-
-            <!--<div id="weather"></div>-->
+            </div><!--<div id="weather"></div>-->
         </div><!-- end of header -->
 
         <div id="maincontent">
-
             <div id="releasenoteshead">
-                <h2>发行注记&nbsp;<span class="tiny clicktogglereleasenotes">折叠</span></h2>
+                <h2>发行注记&nbsp;<span class=
+                "tiny clicktogglereleasenotes">折叠</span></h2>
             </div>
-            <div id="releasenotes">
 
+            <div id="releasenotes">
                 <p>当前版本：v1.14 (2011/11/24)</p>
 
                 <p class="version">Version 1.5(2010/09/19)</p>
@@ -149,10 +151,10 @@
                     网页文件（html）就是文本文件。html文件实质就是加了各种实用标记的文本文件。通过网页浏览器的解释，我们就可以看到漂亮的网页了。建议没有看过网页源代码的人们利用一下浏览器的“查看源代码”功能吧。那些尖括号（和它作用的东西）就使得文本成了超文本了。（当然还有css,
                     超链接的帮忙）
 
-                    <blockquote class="bubble">
-                        "一切程序都应该能处理文本流"
-                    </blockquote>超链接很有意思。起初我就是在想，超链接是怎么实现的。后来发现，其实就是用锚(a
-                    href=)实现的。如此简单。
+                        <blockquote class="bubble">
+                            "一切程序都应该能处理文本流"
+                        </blockquote>超链接很有意思。起初我就是在想，超链接是怎么实现的。后来发现，其实就是用锚(a
+                        href=)实现的。如此简单。
                     </li>
                 </ol>
             </div>
@@ -161,30 +163,31 @@
                 <h2>版权与许可</h2>
 
                 <p><strong>新做了决定，本站点作品(不包含引文)采用<em>知识共享署名-相同方式共享 2.5
-                        中国大陆许可协议</em>进行许可。其条款可以通过点击首页下方的相关链接获得。也可以在<a href=
-                        "http://creativecommons.org/licenses/by-sa/2.5/cn/">这里</a>查看。</strong></p>
-
-                <!-- del tag is nice :) 
+                中国大陆许可协议</em>进行许可。其条款可以通过点击首页下方的相关链接获得。也可以在<a href=
+                "http://creativecommons.org/licenses/by-sa/2.5/cn/">这里</a>查看。</strong></p><!-- del tag is nice :) 
                 Better use del and ins (means `insert' ?) together
                 -->
+
                 <p>
-                版权归我所有，呵呵。当然，引文的版权仍归其原作者享有。<del>许可的问题相当令人头疼，看看现在已经有多少个各不相同的许可证吧。</del><ins>目前看来 CC 协议比较不错。</ins></p>
+                版权归我所有，呵呵。当然，引文的版权仍归其原作者享有。<del>许可的问题相当令人头疼，看看现在已经有多少个各不相同的许可证吧。</del><ins>目前看来
+                CC 协议比较不错。</ins></p>
 
                 <p>
                 许可：您可以自由地复制网站上的各种信息（文本，图片等等）。但是请注意，引文除外。（它们对复制、修改、再发行的许可可能有其他的要求。<strong>请注意原作者的声明。</strong>）</p>
 
-                <p>我很希望html, css的初学者（基本上等于写网站的初学者）能从这个站点得到一些帮助。其实我也是个初学者。:-)</p>
+                <p>我很希望html,
+                css的初学者（基本上等于写网站的初学者）能从这个站点得到一些帮助。其实我也是个初学者。:-)</p>
             </div>
 
             <div class="shadow" id="aboutme">
                 <h2>关于我</h2>
-                <p><a href="../html/libra.html">我的星座</a>:-)</p>
-                <p>与我联系：<a href=
-                    "mailto:alick9188@163.com">邮箱</a> 或者 <abbr title=
-                    "Add me: alick9188@gmail.com">Google talk</abbr>
-                </p>
-            </div>
 
+                <p><a href="../html/libra.html">我的星座</a>:-)</p>
+
+                <p>与我联系：<a href="mailto:alick9188@163.com">邮箱</a> 或者
+                <abbr title="Add me: alick9188@gmail.com">Google
+                talk</abbr></p>
+            </div>
         </div><!-- end of maincontent div -->
     </div><!-- end of maincontainer div -->
 
