--- a/html/cprogramming.html
+++ b/html/cprogramming.html
@@ -26,65 +26,84 @@
         </div>
     </div><!-- end of header -->
 
-    <div id="maincontent">
-        <div id="wecando" class="shadow">
-            <h2><a href="../index.html">首页</a> <a href=
-                    "../html/surfing.html">站点导航</a>
-                <a href="../html/resources.html"
-            class="focus">文档资料</a> <a href="../html/images.html">美图收藏</a>
-            <a href="../html/music.html">OGG音乐</a> <a href=
-            "../html/about.html">关于</a></h2>
-        </div><!-- end of wecando -->
-        <p>C 语言是一门很有历史的程序设计语言，
-        同样也是如今最流行（使用广泛）的语言之一。</p>
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
 
-        <p>C 语言诞生于1972 年，设计者是AT&amp;T Bell 实验室的
-        <a href="http://en.wikipedia.org/wiki/Dennis_Ritchie">Dennis M. Ritchie</a>。它的最初应用就是重写了Unix。</p>
-        <p>C语言的特点是高效、灵活。它的移植性很好。因为它兼有高级语言和
-        汇编语言的特点，所以它有时候会被称为``中级语言''。
-        它属于过程式编程语言。</p>
+            <li><a href="surfing.html">站点导航</a></li>
 
-        <p>指针是C语言的精华。</p>
+            <li><a href="resources.html" class="focus">文档资料</a></li>
 
-        <p>查看GNU BUILD SYSTEM手册，使用<span class="cmdinline">info autoconf</span>。
-        自动化得到Makefile的流程图参考info autoconf 的Making configure Scripts一节。</p>
+            <li><a href="images.html">美图收藏</a></li>
 
-        <p>下面列出一些特定主题的资料：</p>
+            <li><a href="music.html">OGG音乐</a></li>
 
-        <ol>
-            <li><a href="https://www.securecoding.cert.org/confluence/display/seccode/INT02-C.+Understand+integer+conversion+rules">Understand integer conversion rules</a></li>
-            <li><a href=
+            <li><a href="about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
+
+    <div id="maincontainer">
+        <div id="maincontent">
+            <p>C 语言是一门很有历史的程序设计语言， 同样也是如今最流行（使用广泛）的语言之一。</p>
+
+            <p>C 语言诞生于1972 年，设计者是AT&amp;T Bell 实验室的 <a href=
+            "http://en.wikipedia.org/wiki/Dennis_Ritchie">Dennis M.
+            Ritchie</a>。它的最初应用就是重写了Unix。</p>
+
+            <p>C语言的特点是高效、灵活。它的移植性很好。因为它兼有高级语言和 汇编语言的特点，所以它有时候会被称为``中级语言''。
+            它属于过程式编程语言。</p>
+
+            <p>指针是C语言的精华。</p>
+
+            <p>查看GNU BUILD SYSTEM手册，使用<span class="cmdinline">info
+            autoconf</span>。 自动化得到Makefile的流程图参考info autoconf 的Making
+            configure Scripts一节。</p>
+
+            <p>下面列出一些特定主题的资料：</p>
+
+            <ol>
+                <li><a href=
+                "https://www.securecoding.cert.org/confluence/display/seccode/INT02-C.+Understand+integer+conversion+rules">
+                Understand integer conversion rules</a></li>
+
+                <li><a href=
                 "C_operator_priority_list.html">C语言运算符优先级详细列表</a></li>
 
-            <li><a href=
+                <li><a href=
                 "http://www.gnu.org/software/hello/manual/autoconf/Signed-Overflow-Advice.html#Signed-Overflow-Advice">
                 Practical Advice for Signed Overflow Issues</a></li>
 
-            <li><a href="http://hi.baidu.com/jlyan/blog/item/6e6cdbf531ba1e2fbc3109f1.html">辨识类型：右左法则
-            </a></li>
+                <li><a href=
+                "http://hi.baidu.com/jlyan/blog/item/6e6cdbf531ba1e2fbc3109f1.html">
+                辨识类型：右左法则</a></li>
 
-            <li><a href="http://www.cas.mcmaster.ca/~carette/SE3M04/2004/slides/CCodingStyle.html">C Coding Style Notes</a></li>
+                <li><a href=
+                "http://www.cas.mcmaster.ca/~carette/SE3M04/2004/slides/CCodingStyle.html">
+                C Coding Style Notes</a></li>
 
-            <li><a href="http://lxr.linux.no.sixxs.org/#linux+v2.6.35/Documentation/CodingStyle">Linux Coding Style</a></li>
+                <li><a href=
+                "http://lxr.linux.no.sixxs.org/#linux+v2.6.35/Documentation/CodingStyle">
+                Linux Coding Style</a></li>
+            </ol>
 
-        </ol>
+            <p>全面的资料：</p>
 
-        <p>全面的资料：</p>
-        <ol>
-            <li><a href="http://net.pku.edu.cn/~yhf/linux_c/">
-                Linux常用C函数</a></li>
+            <ol>
+                <li><a href=
+                "http://net.pku.edu.cn/~yhf/linux_c/">Linux常用C函数</a></li>
 
-            <li><a href="http://learn.akae.cn/media/index.html">Linux
+                <li><a href="http://learn.akae.cn/media/index.html">Linux
                 C编程一站式学习</a></li>
 
-            <li><a href="http://www.iso-9899.info/wiki/Main_Page">##C on
+                <li><a href="http://www.iso-9899.info/wiki/Main_Page">##C on
                 Freenode Wiki</a></li>
 
-            <li><a href="http://en.wikibooks.org.sixxs.org/wiki/C_Programming">C Programming on Wikibooks</a></li>
-
-        </ol>
-
-    </div><!-- end of maincontent -->
+                <li><a href=
+                "http://en.wikibooks.org.sixxs.org/wiki/C_Programming">C
+                Programming on Wikibooks</a></li>
+            </ol>
+        </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <div class="tiny">
@@ -98,7 +117,6 @@
             "http://creativecommons.org/licenses/by-sa/2.5/cn/"><img alt=
             "Creative Commons License" style="border-width:0" src=
             "../img/80x15.png" /></a><br />
-
             本作品采用<a rel="license" href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/">知识共享署名-相同方式共享
             2.5 中国大陆许可协议</a>进行许可。</p>
