--- a/html/emacs.html
+++ b/html/emacs.html
@@ -22,25 +22,35 @@
         <div id="tagline">
             <p><strong>Emacs 是一个伪装成操作系统的文本编辑器</strong></p>
         </div>
-
     </div><!-- end of header -->
 
-    <div id="maincontent">
-        <div id="wecando" class="shadow">
-            <ul>
-                <li><a href="../index.html">首页</a></li>
-                <li><a href="resources.html">文档资料</a></li>
-            </ul>
-        </div><!-- end of wecando -->
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
 
-        <p> Emacs 是一个流行的文本编辑器。多么流行？嗯，和 
-        <a href="vim.html">Vim</a> 差不多。</p>
-        <p> Emacs 如今也是无所不在的，至少它的键绑定是的。
-        GNU Readline ，MATLAB UNIX版默认的键绑定都是 Emacs 风格的。
-        </p>
-        <h2>Emacs的全称</h2>
-        <p>Emacs 是什么的缩写？不同人有不同的见解：</p>
-        <pre>
+            <li><a href="surfing.html">站点导航</a></li>
+
+            <li><a href="resources.html" class="focus">文档资料</a></li>
+
+            <li><a href="images.html">美图收藏</a></li>
+
+            <li><a href="music.html">OGG音乐</a></li>
+
+            <li><a href="about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
+
+    <div id="maincontainer">
+        <div id="maincontent">
+            <p>Emacs 是一个流行的文本编辑器。多么流行？嗯，和 <a href="vim.html">Vim</a> 差不多。</p>
+
+            <p>Emacs 如今也是无所不在的，至少它的键绑定是的。 GNU Readline ，MATLAB UNIX版默认的键绑定都是
+            Emacs 风格的。</p>
+
+            <h2>Emacs的全称</h2>
+
+            <p>Emacs 是什么的缩写？不同人有不同的见解：</p>
+            <pre>
 <strong><code>Emacs</code></strong>  
 Editor MACroS
 Emacs Makes A Computer Slow
@@ -65,13 +75,13 @@ Easily Maintained with the Assistance of Chemical Solutions
 Eradication of Memory Accomplished with Complete Simplicity  
 </pre>
 
-        <h2>更多</h2>
+            <h2>更多</h2>
 
-        <p>更多有关 Emacs 的知识，请参考 <a href=
-        "http://docs.huihoo.com/homepage/shredderyin/emacs.html">http://docs.huihoo.com/homepage/shredderyin/emacs.html</a></p>
-    </div><!-- end of maincontent div-->
+            <p>更多有关 Emacs 的知识，请参考 <a href=
+            "http://docs.huihoo.com/homepage/shredderyin/emacs.html">http://docs.huihoo.com/homepage/shredderyin/emacs.html</a></p>
+        </div><!-- end of maincontent div-->
+    </div><!-- end of maincontainer div -->
 
-    <div id="bottom">
-    </div><!-- end of bottom div -->
+    <div id="bottom"></div><!-- end of bottom div -->
 </body>
 </html>
