--- a/html/huochepiao.html
+++ b/html/huochepiao.html
@@ -24,37 +24,42 @@
         <div id="sitebranding">
             <h1>火车票查询</h1>
         </div>
+
         <div id="tagline">
             <p>数据来自huochepiao.com</p>
         </div>
-
     </div><!-- end of header -->
 
-    <div id="sidebar">
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
 
-        <div id="timer">
-            <!-- show current time -->
-        </div>
+            <li><a href="surfing.html">站点导航</a></li>
 
-    </div>
-    <div id="maincontent">
-        <div id="wecando">
-            <h2><a href="../index.html" class="focus">首页</a> <a href="surfing.html">站点导航</a>
-            <a href="resources.html">文档资料</a> <a href="images.html">美图收藏</a>
-            <a href="music.html">OGG音乐</a> <a href="about.html">关于</a></h2>
-        </div><!-- end of wecando -->
+            <li><a href="resources.html" class="focus">文档资料</a></li>
 
-        <div id="huochepiao">
-            <object type="text/html" data=
-            'http://search.huochepiao.com/search.htm'>
-                </object>
-        </div><!-- end of huochepiao -->
-    </div><!-- end of maincontent -->
+            <li><a href="images.html">美图收藏</a></li>
+
+            <li><a href="music.html">OGG音乐</a></li>
+
+            <li><a href="about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
+
+    <div id="maincontainer">
+        <div id="maincontent">
+            <div id="huochepiao">
+                <object type="text/html" data=
+                'http://search.huochepiao.com/search.htm'>
+                    </object>
+            </div><!-- end of huochepiao -->
+        </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <div class="tiny">
-            <p><a href="http://validator.w3.org/">Valid XHTML 1.0 Strict</a>
-</p>
+            <p><a href="http://validator.w3.org/">Valid XHTML 1.0
+            Strict</a></p>
 
             <p><span class="fun">推荐使用良好支持标准的浏览器</span><a href=
             "http://www.mozillaonline.com/">获得Firefox</a></p>
