--- a/html/images.html
+++ b/html/images.html
@@ -15,8 +15,7 @@
     <script type="text/javascript" src="../js/slide.js">
 </script>
     <script type="text/javascript" src="../js/lunar1.js">
-</script>
-<!--<script type="text/javascript" src="../js/weather.js">-->
+</script><!--<script type="text/javascript" src="../js/weather.js">-->
     <!--</script>-->
 </head>
 
@@ -36,10 +35,15 @@
     <div id="wecando" class="shadow">
         <ul>
             <li><a href="../index.html">首页</a></li>
+
             <li><a href="surfing.html">站点导航</a></li>
+
             <li><a href="resources.html">文档资料</a></li>
+
             <li><a href="#image" class="focus">美图收藏</a></li>
+
             <li><a href="music.html">OGG音乐</a></li>
+
             <li><a href="about.html">关于</a></li>
         </ul>
     </div><!-- end of wecando -->
@@ -48,14 +52,10 @@
         <div id="sidebar">
             <div id="timer">
                 <!-- show current time -->
-            </div>
-
-            <!--<div id="weather"> </div>-->
-
+            </div><!--<div id="weather"> </div>-->
         </div><!-- end of sidebar -->
 
         <div id="maincontent">
-
             <div id="image">
                 <div id="image_box_container">
                     <div id="image_box" class="img_center">
@@ -71,8 +71,8 @@
                 <div class="shadow">
                     <a href="#" id="prelink" name="prelink">&lt;&lt;后退</a>
                     <a href="#" id="nextlink" name="nextlink">前进&gt;&gt;</a>
-                    &nbsp;&nbsp; <input type="button" id="auto" value="幻灯片效果" />
-                    <input type="button" id="noauto" value="停止" />
+                    &nbsp;&nbsp; <input type="button" id="auto" value=
+                    "幻灯片效果" /> <input type="button" id="noauto" value="停止" />
                 </div>
             </div>
         </div><!-- end of maincontent -->
