--- a/html/matlab.html
+++ b/html/matlab.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
     <!-- <script type="text/javascript" src="../js/"> -->
-        <!--</script>-->
+    <!--</script>-->
 </head>
 
 <body>
@@ -24,41 +24,57 @@
         </div>
     </div><!-- end of header -->
 
-    <div id="maincontent">
-        <div id="wecando">
-            <h2>
-                <a href="../index.html">首页</a>
-                <a href="resources.html" class="focus">文档资料</a>
-            </h2>
-        </div><!-- end of wecando -->
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
 
-        <p>下面是引自<a href=
-        "http://baike.baidu.com/view/10598.htm">百度百科</a>的介绍。</p>
+            <li><a href="surfing.html">站点导航</a></li>
 
-        <blockquote class="bubble">
-            MATLAB是矩阵实验室（Matrix Laboratory）的简称，是美国MathWorks公司出品的商业数学软件。
-        </blockquote>
+            <li><a href="resources.html" class="focus">文档资料</a></li>
 
-        <p>Matlab擅长<strong>数值计算</strong>。另外有许多工具箱，适合解决多种工程问题。
+            <li><a href="images.html">美图收藏</a></li>
 
-        <p>下面列出一些在线资料</p>
-        <ol>
-            <li><a href="http://www.mathworks.com/matlabcentral/">
-                MATLAB Central, An open exchange for the MATLAB and Simulink user community</a></li>
+            <li><a href="music.html">OGG音乐</a></li>
 
-            <li><a href="http://www.eepw.com.cn/article/55663.htm">Matlab
-            命令大全</a></li>
+            <li><a href="about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
 
-            <li><a href=
-            "http://www.sciencenet.cn/m/user_content.aspx?id=275782">
-            MATLAB GUI 新手备忘录</a></li>
-            <li><a href="http://home.online.no/~pjacklam/matlab/index.html">
-                Great MATLAB stuff BY pjacklam</a></li>
-            <li><a href=
-                "http://www.reimeika.ca/marco/matlab/coolplots.html">
-                Cool plots with MATLAB under Linux</a></li>
-        </ol>
-    </div><!-- end of maincontent -->
+    <div id="maincontainer">
+        <div id="maincontent">
+            <p>下面是引自<a href=
+            "http://baike.baidu.com/view/10598.htm">百度百科</a>的介绍。</p>
+
+            <blockquote class="bubble">
+                MATLAB是矩阵实验室（Matrix Laboratory）的简称，是美国MathWorks公司出品的商业数学软件。
+            </blockquote>
+
+            <p>Matlab擅长<strong>数值计算</strong>。另外有许多工具箱，适合解决多种工程问题。</p>
+
+            <p>下面列出一些在线资料</p>
+
+            <ol>
+                <li><a href="http://www.mathworks.com/matlabcentral/">MATLAB
+                Central, An open exchange for the MATLAB and Simulink user
+                community</a></li>
+
+                <li><a href="http://www.eepw.com.cn/article/55663.htm">Matlab
+                命令大全</a></li>
+
+                <li><a href=
+                "http://www.sciencenet.cn/m/user_content.aspx?id=275782">MATLAB
+                GUI 新手备忘录</a></li>
+
+                <li><a href=
+                "http://home.online.no/~pjacklam/matlab/index.html">Great
+                MATLAB stuff BY pjacklam</a></li>
+
+                <li><a href=
+                "http://www.reimeika.ca/marco/matlab/coolplots.html">Cool
+                plots with MATLAB under Linux</a></li>
+            </ol>
+        </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <p>与我联系：<a href="mailto:alick9188@163.com">邮箱</a></p>
