--- a/html/music.html
+++ b/html/music.html
@@ -13,8 +13,7 @@
     <script type="text/javascript" src="../js/eventsManager.js/">
 </script>
     <script type="text/javascript" src="../js/lunar1.js">
-</script>
-<!--<script type="text/javascript" src="../js/weather.js">-->
+</script><!--<script type="text/javascript" src="../js/weather.js">-->
     <!--</script>-->
 </head>
 
@@ -35,24 +34,27 @@
     <div id="wecando" class="shadow">
         <ul>
             <li><a href="../index.html">首页</a></li>
+
             <li><a href="surfing.html">站点导航</a></li>
+
             <li><a href="resources.html">文档资料</a></li>
+
             <li><a href="images.html">美图收藏</a></li>
+
             <li><a href="#oggintro" class="focus">OGG音乐</a></li>
+
             <li><a href="about.html">关于</a></li>
         </ul>
     </div><!-- end of wecando -->
+
     <div id="maincontainer">
         <div id="sidebar">
             <div id="timer">
                 <!-- show current time -->
-            </div>
-
-            <!--<div id="weather"></div>-->
+            </div><!--<div id="weather"></div>-->
         </div><!-- end of sidebar -->
 
         <div id="maincontent">
-
             <div id="oggintro">
                 <p>鉴于ogg在中国还不为许多人了解，这里提供一些资料（主要是音乐文件）做一些推广。</p>
 
@@ -70,33 +72,30 @@
                 Vorbis虽然还不普及，但在音乐软件、游戏音效、便携播放器、网络浏览器上都得到广泛支持。</p>
 
                 <p>更多内容，可以参看<a href=
-                    "http://baike.baidu.com/view/99249.htm">百度百科</a>。</p>
+                "http://baike.baidu.com/view/99249.htm">百度百科</a>。</p>
 
                 <h2>播放器软件</h2>
 
                 <p>
-                Windows下Winamp、Sonique、FreeAMP等（网上介绍）都可以播放ogg格式的文件。我比较推荐Mplayer，这是一款全能、开源、<abbr title="这是个中国特色的词语"><span class="fun">“绿色”</span></abbr>的音视频播放器。最初是Linux下的，现在已经有<abbr title="Linux, Windows, Mac OS X等">各平台</abbr>下的版本。
-                </p>
-                <p>
-                Mplayer官网是www.mplayerhq.hu （一个匈牙利的网站），
-                要下载中文版的Mplayer for Windows可以到
-                <a href= "http://www.mplayer.org.cn/">
-                    http://www.mplayer.org.cn/</a>。
-                </p>
+                Windows下Winamp、Sonique、FreeAMP等（网上介绍）都可以播放ogg格式的文件。我比较推荐Mplayer，这是一款全能、开源、<abbr title="这是个中国特色的词语"><span class="fun">“绿色”</span></abbr>的音视频播放器。最初是Linux下的，现在已经有<abbr title="Linux, Windows, Mac OS X等">各平台</abbr>下的版本。</p>
+
+                <p>Mplayer官网是www.mplayerhq.hu （一个匈牙利的网站）， 要下载中文版的Mplayer for
+                Windows可以到 <a href=
+                "http://www.mplayer.org.cn/">http://www.mplayer.org.cn/</a>。</p>
             </div>
 
             <div id="songs" class="shadow">
                 <h1>songs</h1>
 
                 <p>Westlife: <a href=
-                    "../music/How_Does_If_Feel.ogg">How_Does_It_Feel</a></p>
+                "../music/How_Does_If_Feel.ogg">How_Does_It_Feel</a></p>
             </div>
 
             <div id="music" class="shadow">
                 <h1>music</h1>
 
                 <p>加勒比海盗里的<a href=
-                    "../music/he's_a_pirate.ogg">he's_a_pirate</a></p>
+                "../music/he's_a_pirate.ogg">he's_a_pirate</a></p>
             </div>
         </div><!-- end of maincontent div -->
     </div><!-- end of maincontainer div -->
