--- a/html/phps.html
+++ b/html/phps.html
@@ -24,31 +24,40 @@
         </div>
     </div><!-- end of header -->
 
-    <div id="maincontent">
-        <div id="wecando">
-            <h2>
-                <a href="../index.html" class="focus">首页</a>
-            </h2>
-        </div><!-- end of wecando -->
-
-        <p>这里收录我的各个网上空间/博客等。</p>
-
+    <div id="wecando" class="shadow">
         <ul>
-            <li><a href=
-            "http://learn.tsinghua.edu.cn:8080/2008011211/index.html">
-            learn.tsinghua.edu.cn</a></li>
+            <li><a href="../index.html">首页</a></li>
 
-            <li><a href=
-            "http://hi.baidu.com/alick_9188/home">百度空间</a></li>
+            <li><a href="surfing.html">站点导航</a></li>
 
-            <li><a href=
-            "http://alick9188.blog.163.com/">163</a></li>
+            <li><a href="resources.html" class="focus">文档资料</a></li>
 
-            <li><a href="http://linux.cn/home/6700">
-            linux.cn home</a></li>
+            <li><a href="images.html">美图收藏</a></li>
 
+            <li><a href="music.html">OGG音乐</a></li>
+
+            <li><a href="about.html">关于</a></li>
         </ul>
-    </div><!-- end of maincontent -->
+    </div><!-- end of wecando -->
+
+    <div id="maincontainer">
+        <div id="maincontent">
+            <p>这里收录我的各个网上空间/博客等。</p>
+
+            <ul>
+                <li><a href=
+                "http://learn.tsinghua.edu.cn:8080/2008011211/index.html">learn.tsinghua.edu.cn</a></li>
+
+                <li><a href=
+                "http://hi.baidu.com/alick_9188/home">百度空间</a></li>
+
+                <li><a href="http://alick9188.blog.163.com/">163</a></li>
+
+                <li><a href="http://linux.cn/home/6700">linux.cn
+                home</a></li>
+            </ul>
+        </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <p>与我联系：<a href="mailto:alick9188@163.com">邮箱</a></p>
