--- a/html/resources.html
+++ b/html/resources.html
@@ -15,8 +15,7 @@
     <script type="text/javascript" src="../js/multiSearch.js">
 </script>
     <script type="text/javascript" src="../js/lunar1.js">
-</script>
-<!--<script type="text/javascript" src="../js/weather.js">-->
+</script><!--<script type="text/javascript" src="../js/weather.js">-->
     <!--</script>-->
 </head>
 
@@ -27,17 +26,24 @@
         <div id="sitebranding">
             <h1>资料</h1>
         </div>
+
         <div id="tagline">
             <p><strong>向 Wiki 看齐</strong></p>
         </div>
     </div><!-- end of header -->
+
     <div id="wecando" class="shadow">
         <ul>
             <li><a href="../index.html">首页</a></li>
+
             <li><a href="surfing.html">站点导航</a></li>
+
             <li><a href="#resources" class="focus">文档资料</a></li>
+
             <li><a href="images.html">美图收藏</a></li>
+
             <li><a href="music.html">OGG音乐</a></li>
+
             <li><a href="about.html">关于</a></li>
         </ul>
     </div><!-- end of wecando -->
@@ -46,27 +52,26 @@
         <div id="sidebar">
             <div id="timer">
                 <!-- show current time -->
-            </div>
-
-            <!--<div id="weather"></div>-->
+            </div><!--<div id="weather"></div>-->
 
             <div id="search">
                 <!-- SiteSearch Google copyed from Google but modified-->
+
                 <form method="get" id="form1" action=
-                    "http://www.google.com.hk/search">
+                "http://www.google.com.hk/search">
                     <fieldset>
                         <input type="hidden" name="ie" value="UTF-8" />
                         <input type="hidden" name="oe" value="UTF-8" />
-                        <abbr title="用google.cn搜索"><input type="text" name="q"
-                            size="20" maxlength="255" value="" /></abbr> 
+                        <abbr title="用google.cn搜索"><input type="text" name=
+                        "q" size="20" maxlength="255" value="" /></abbr> 
                         <!--<input type="radio" name="sitesearch" value="http://learn.tsinghua.edu.cn:8080/" /><span class="fun">tsinghuaren</span>-->
-                        <select id="select">
+                         <select id="select">
                             <option selected="selected" value="0">
-                            google.com.hk
+                                google.com.hk
                             </option>
 
                             <option value="1">
-                            google.com
+                                google.com
                             </option>
                         </select> <input type="submit" name="btnG" value="Go"
                         onclick="multi_search()" />
@@ -76,33 +81,54 @@
         </div><!-- end of sidebar -->
 
         <div id="maincontent">
-
             <div id="resources">
                 <div id="local" class="shadow">
                     <h2>本站资料：</h2>
 
                     <ol>
                         <li><a href="Unix_philosophy.html">Unix哲学</a></li>
+
                         <li><a href=
-                            "../txt/humourous_Linux_UNIX_commands.txt">幽默命令</a></li>
+                        "../txt/humourous_Linux_UNIX_commands.txt">幽默命令</a></li>
+
                         <li><a href="linux.html">Linux</a></li>
+
                         <li><a href="emacs.html">EMACS</a></li>
+
                         <li><a href="vim.html">VIM</a></li>
+
                         <li><a href="fvwm.html">fvwm</a></li>
-                        <li><a href="tex.html"><span class="latex">T<sub>e</sub>X</span></a></li>
+
+                        <li><a href="tex.html"><span class=
+                        "latex">T<sub>e</sub>X</span></a></li>
+
                         <li><a href="cprogramming.html">C语言</a></li>
+
                         <li><a href="python.html">Python语言</a></li>
+
+                        <li><a href="unicode.html">UNICODE</a></li>
+
                         <li><a href="matlab.html">Matlab</a></li>
+
                         <li><a href="git.html">git</a></li>
+
                         <li><a href="spice.html">SPICE</a></li>
+
                         <li><a href="gnuradio.html">GNU Radio</a></li>
+
                         <li><a href="jquery.html">jQuery</a></li>
+
                         <li><a href="math-test.xhtml">MathML</a></li>
-                        <li><a href="../txt/Ati_and_Nvidia_graphics_naming.txt">
-                            ATI与Nvidia显卡命名规则</a></li>
-                        <li><a href="gsm-gprs.html">GSM/GPRS 调研</a>
+
+                        <li><a href=
+                        "../txt/Ati_and_Nvidia_graphics_naming.txt">ATI与Nvidia显卡命名规则</a></li>
+
+                        <li><a href="gsm-gprs.html">GSM/GPRS 调研</a></li>
+
                         <li><a href="wind.html">风力等级表</a></li>
+
                         <li><a href="ascii_smileys.html">ASCII 表情符</a></li>
+
                         <li><a href="chat_acronyms.html">聊天中常见英文缩略词</a></li>
                     </ol>
                 </div><!-- end of local div -->
@@ -114,56 +140,58 @@
                         <li><a href="http://chl.be/mascots/">开源吉祥物汇总</a></li>
 
                         <li><a href=
-                            "http://www.w3school.com.cn/tags/html_ref_colornames.asp">
-                            HTML颜色名</a></li>
+                        "http://www.w3school.com.cn/tags/html_ref_colornames.asp">
+                        HTML颜色名</a></li>
 
                         <li><a href=
-                            "http://www.w3schools.com/css/css_colornames.asp">CSS颜色名</a></li>
+                        "http://www.w3schools.com/css/css_colornames.asp">CSS颜色名</a></li>
 
                         <li><a href=
-                            "http://www.yesky.com/imagesnew/software/jscript/back16.htm">
-                            RGB颜色转换</a></li>
+                        "http://www.yesky.com/imagesnew/software/jscript/back16.htm">
+                        RGB颜色转换</a></li>
 
                         <li><a href=
-                            "http://jsxzjh.bokee.com/3744988.html">常用RGB颜色表--Hello
-                            world!</a></li>
+                        "http://jsxzjh.bokee.com/3744988.html">常用RGB颜色表--Hello
+                        world!</a></li>
 
                         <li><a href=
-                            "http://jomor.org/2009/01/24/some-wonderful-color-code">一些比较好看的颜色代码</a></li>
+                        "http://jomor.org/2009/01/24/some-wonderful-color-code">
+                        一些比较好看的颜色代码</a></li>
 
                         <li><a href=
-                            "http://www.w3schools.com/tags/ref_entities.asp">HTML
-                            ENTITIES 参考</a></li>
+                        "http://www.w3schools.com/tags/ref_entities.asp">HTML
+                        ENTITIES 参考</a></li>
 
                         <li><a href=
-                            "http://baike.baidu.com/view/644772.htm">十六进制颜色码</a></li>
+                        "http://baike.baidu.com/view/644772.htm">十六进制颜色码</a></li>
 
                         <li><a href=
-                            "http://blog.wuxinan.net/archives/312">图片格式GIF、JPEG 和 PNG
-                            的比较</a></li>
+                        "http://blog.wuxinan.net/archives/312">图片格式GIF、JPEG 和
+                        PNG 的比较</a></li>
 
                         <li><a href=
-                            "http://www.jb51.net/article/5616.htm">漂亮的Slider效果类终于封装成功_javascript技巧_脚本之家</a></li>
-
-                        <li><a href="http://www.jb51.net/article/20779.htm">PHP
-                            CKEditor 上传图片实现代码_php技巧_脚本之家</a></li>
+                        "http://www.jb51.net/article/5616.htm">漂亮的Slider效果类终于封装成功_javascript技巧_脚本之家</a></li>
 
                         <li><a href=
-                            "http://articles.sitepoint.com/article/advanced-email-php/5">
-                            Advanced email in PHP [PHP &amp; MySQL
-                            Tutorials]</a></li>
+                        "http://www.jb51.net/article/20779.htm">PHP CKEditor
+                        上传图片实现代码_php技巧_脚本之家</a></li>
+
+                        <li><a href=
+                        "http://articles.sitepoint.com/article/advanced-email-php/5">
+                        Advanced email in PHP [PHP &amp; MySQL
+                        Tutorials]</a></li>
                     </ol>
                 </div>
             </div>
         </div>
-    </div> <!-- end of maincontainer -->
+    </div><!-- end of maincontainer -->
 
     <div id="bottom">
         <div class="tiny">
             <p><a href="http://validator.w3.org/">Valid XHTML 1.0 Strict</a>
             <span class="fun">推荐使用良好支持标准的浏览器</span><a href=
-                "http://www.mozillaonline.com/">获得Firefox</a>
-            </p>
+            "http://www.mozillaonline.com/">获得Firefox</a></p>
+
             <p>CC-BY-SA许可</p>
         </div>
     </div>
