--- a/html/special_characters.html
+++ b/html/special_characters.html
@@ -13,34 +13,36 @@
     -->
     <link href="../img/favicon.ico" rel="SHORTCUT ICON" />
     <!-- <script type="text/javascript" src="../js/drag.js"> -->
-        <!--</script>-->
+    <!--</script>-->
 </head>
 
 <body>
-    <table style="border: 1px solid #aaaaaa;" summary="Special Characters &amp; HTML entities">
-        <th>
-            Special Characters &amp; HTML entities
-        </th>
+    <p>Special Characters &amp; HTML entities</p>
+
+    <table style="border: 1px solid #aaaaaa;" summary=
+    "Special Characters &amp; HTML entities">
         <tr>
             <td style="margin: 0; border: 1px solid #bbbbbb;">
-    <pre>
+                <pre>
 &amp;alpha; &amp;beta; &amp;gamma; &amp;delta; &amp;epsilon; &amp;zeta;
 &amp;eta; &amp;theta; &amp;iota; &amp;kappa; &amp;lambda; &amp;mu; &amp;nu;
 &amp;xi; &amp;omicron; &amp;pi; &amp;rho;  &amp;sigma; &amp;sigmaf;
 &amp;tau; &amp;upsilon; &amp;phi; &amp;chi; &amp;psi; &amp;omega;
 &amp;Gamma; &amp;Delta; &amp;Theta; &amp;Lambda; &amp;Xi; &amp;Pi;
 &amp;Sigma; &amp;Phi; &amp;Psi; &amp;Omega;
-    </pre>
+    
+</pre>
             </td>
-            <td style="margin: 0; border: 1px solid #bbbbbb;">
-&alpha; &beta; &gamma; &delta; &epsilon; &zeta; <br />
-&eta; &theta; &iota; &kappa; &lambda; &mu; &nu; <br />
-&xi; &omicron; &pi; &rho;  &sigma; &sigmaf;     <br />
-&tau; &upsilon; &phi; &chi; &psi; &omega;       <br />
-&Gamma; &Delta; &Theta; &Lambda; &Xi; &Pi;      <br />
-&Sigma; &Phi; &Psi; &Omega;
-            </td>
+
+            <td style="margin: 0; border: 1px solid #bbbbbb;">α β γ δ ε
+            ζ<br />
+            η θ ι κ λ μ ν<br />
+            ξ ο π ρ σ ς<br />
+            τ υ φ χ ψ ω<br />
+            Γ Δ Θ Λ Ξ Π<br />
+            Σ Φ Ψ Ω</td>
         </tr>
+
         <tr>
             <td style="margin: 0; border: 1px solid #bbbbbb;">
                 <pre>
@@ -53,28 +55,24 @@
 &amp;not; &amp;and; &amp;or; &amp;exist; &amp;forall; 
 &amp;rArr; &amp;hArr; &amp;rarr; &amp;harr; &amp;uarr; 
 &amp;alefsym; - &amp;ndash; &amp;mdash; 
-                </pre>
+                
+</pre>
             </td>
-            <td style="margin: 0; border: 1px solid #bbbbbb;">
-&int; &sum; &prod; &radic; &minus; &plusmn; &infin; <br />
-&asymp; &prop; {{=}} &equiv; &ne; &le; &ge; &plusmn; &infin; <br />
-&times; &middot; &divide; &part; &prime; &Prime;&plusmn; &infin; <br />
-&nabla; &permil; &deg; &there4; &Oslash; &oslash;&plusmn; &infin; <br />
-&isin; &notin; &plusmn; &infin; <br />
-&cap; &cup; &sub; &sup; &sube; &supe;&plusmn; &infin; <br />
-&not; &and; &or; &exist; &forall; &plusmn; &infin; <br />
-&rArr; &hArr; &rarr; &harr; &uarr; &plusmn; &infin; <br />
-&alefsym; - &ndash; &mdash; &plusmn; &infin;
-            </td>
+
+            <td style="margin: 0; border: 1px solid #bbbbbb;">∫ ∑ ∏ √ − ±
+            ∞<br />
+            ≈ ∝ {{=}} ≡ ≠ ≤ ≥ ± ∞<br />
+            × · ÷ ∂ ′ ″± ∞<br />
+            ∇ ‰ ° ∴ Ø ø± ∞<br />
+            ∈ ∉ ± ∞<br />
+            ∩ ∪ ⊂ ⊃ ⊆ ⊇± ∞<br />
+            ¬ ∧ ∨ ∃ ∀ ± ∞<br />
+            ⇒ ⇔ → ↔ ↑ ± ∞<br />
+            ℵ - – — ± ∞</td>
         </tr>
     </table>
 
-    <p>
-    参见
-    <a href="http://meta.wikimedia.org/wiki/Help:Displaying_a_formula">
-        http://meta.wikimedia.org/wiki/Help:Displaying_a_formula
-    </a>
-    </p>
+    <p>参见 <a href=
+    "http://meta.wikimedia.org/wiki/Help:Displaying_a_formula">http://meta.wikimedia.org/wiki/Help:Displaying_a_formula</a></p><!-- vim:set et sw=4: -->
 </body>
 </html>
-<!-- vim:set et sw=4: -->
