--- a/html/tex.html
+++ b/html/tex.html
@@ -23,124 +23,163 @@
         "happy latexing" /></div>
     </div><!-- end of header -->
 
-    <div id="maincontent">
-        <div id="wecando">
-            <h2><a id="index" href="../index.html" class="focus" name=
-                    "index">首页</a></h2>
-        </div><!-- end of wecando -->
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
 
-        <div id="content-area">
-        <p>TeX是一个专业的文档排版工具，用于生成高质量的文档书籍。如今
-        也被用于生成电子文档。TeX尤其擅长于对数学公式的排版。</p>
+            <li><a href="surfing.html">站点导航</a></li>
 
-        <p>TeX 现在已经被Knuth 冻结(frozen)，它的版本号也很有趣，每一个
-        修订版都将版本号增加一位，是收敛于π的。现在的最新版为3.1415926
-        。</p>
+            <li><a href="resources.html" class="focus">文档资料</a></li>
 
-        <p><a href=
-            "http://www.ctex.org/TeX">这里</a>有对TeX的历史、未来、优点和
-        不足等的中文简介。</p>
+            <li><a href="images.html">美图收藏</a></li>
 
-        <p>LaTeX 是对 TeX 的扩展，它引入了文档类的概念，
-        并定义了许多高层的命令，使得普通人也可以很方便地写出高质量文章、
-        论文、书籍。</p>
+            <li><a href="music.html">OGG音乐</a></li>
 
-        <p>TeX 等名字会被它的排版引擎做特殊的处理。
-        使用 <span class="cmdline">\TeX</span>
-        可以得到 <span class="latex">T<sub>e</sub>X</span>，
-        使用 <span class="cmdline">\LaTeX</span>
-        可以得到 <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>，
-        使用 <span class="cmdline">\XeTeX</span>
-        可以得到 <span class="latex">X<sub>∃</sub>T<sub>e</sub>X</span>。
-        </p>
+            <li><a href="about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
 
-        <p>CTAN(Comprehensive TeX Archive
-        Network)是提供最齐全的及时更新的与TeX相关的软件的一个站点，在
-        全球有许多镜像站点。中国大陆有<a href=
+    <div id="maincontainer">
+        <div id="maincontent">
+            <p>TeX是一个专业的文档排版工具，用于生成高质量的文档书籍。如今
+            也被用于生成电子文档。TeX尤其擅长于对数学公式的排版。</p>
+
+            <p>TeX 现在已经被Knuth 冻结(frozen)，它的版本号也很有趣，每一个
+            修订版都将版本号增加一位，是收敛于π的。现在的最新版为3.1415926 。</p>
+
+            <p><a href="http://www.ctex.org/TeX">这里</a>有对TeX的历史、未来、优点和
+            不足等的中文简介。</p>
+
+            <p>LaTeX 是对 TeX 的扩展，它引入了文档类的概念， 并定义了许多高层的命令，使得普通人也可以很方便地写出高质量文章、
+            论文、书籍。</p>
+
+            <p>TeX 等名字会被它的排版引擎做特殊的处理。 使用 <span class="cmdline">\TeX</span>
+            可以得到 <span class="latex">T<sub>e</sub>X</span>， 使用 <span class=
+            "cmdline">\LaTeX</span> 可以得到 <span class=
+            "latex">L<sup>a</sup>T<sub>e</sub>X</span>， 使用 <span class=
+            "cmdline">\XeTeX</span> 可以得到 <span class=
+            "latex">X<sub>∃</sub>T<sub>e</sub>X</span>。</p>
+
+            <p>CTAN(Comprehensive TeX Archive
+            Network)是提供最齐全的及时更新的与TeX相关的软件的一个站点，在 全球有许多镜像站点。中国大陆有<a href=
             "ftp://ftp.ctex.org/mirrors/CTAN/">ctex的镜像</a>和<a href=
             "ftp://mirrors.xmu.edu.cn/CTAN/">厦门大学的镜像</a>。</p>
-        <p>要在 Linux 系统下安装 TeX 工具，推荐用网络安装的方式下载安装 TeX Live 最新版（目前是 2011）。
-        这需要首先下载一个
-        <a href='ftp://ftp.ctex.org/mirrors/CTAN/systems/texlive/tlnet/install-tl-unx.tar.gz'>安装脚本</a>，
-        名字为 install-tl-unx.tar.gz 。解压后在解压得到的目录下使用类似下面的命令安装：</p>
-        <pre>sudo ./install-tl --gui=perltk -repository='ftp://ftp.ctex.org/mirrors/CTAN/systems/texlive/tlnet/'</pre>
-        <p>也就是说，安装需要 root 权限（如果不选择安装到系统目录则不需要），指定使用 GUI 图形界面（需要系统上有 Perl 的
-        Tk 模块），指定从 ctex.org 的镜像下载需要安装的软件（各种宏包和文档）。</p>
 
+            <p>要在 Linux 系统下安装 TeX 工具，推荐用网络安装的方式下载安装 TeX Live 最新版（目前是 2011）。
+            这需要首先下载一个 <a href=
+            'ftp://ftp.ctex.org/mirrors/CTAN/systems/texlive/tlnet/install-tl-unx.tar.gz'>
+            安装脚本</a>， 名字为 install-tl-unx.tar.gz 。解压后在解压得到的目录下使用类似下面的命令安装：</p>
+            <pre>
+sudo ./install-tl --gui=perltk -repository='ftp://ftp.ctex.org/mirrors/CTAN/systems/texlive/tlnet/'
+</pre>
 
-        <p>用于TeX的文档字数统计工具：
-        <pre>texcount -chinese texfile</pre>
+            <p>也就是说，安装需要 root 权限（如果不选择安装到系统目录则不需要），指定使用 GUI 图形界面（需要系统上有 Perl
+            的 Tk 模块），指定从 ctex.org 的镜像下载需要安装的软件（各种宏包和文档）。</p>
 
-        <p>TeX 中的长度单位</p>
-        <pre>1pt=65536sp=1/72.27in</pre>
-        <pre>1in=25.4mm=2.54cm</pre>
-        <pre>1bp=1/72in</pre>
+            <p>用于TeX的文档字数统计工具：</p>
+            <pre>
+texcount -chinese texfile
+</pre>
 
-        <p>下面列出一些在线资料</p>
+            <p>TeX 中的长度单位</p>
+            <pre>
+1pt=65536sp=1/72.27in
+</pre>
+            <pre>
+1in=25.4mm=2.54cm
+</pre>
+            <pre>
+1bp=1/72in
+</pre>
 
-        <ol>
-            <li>中文相关
+            <p>下面列出一些在线资料</p>
+
             <ol>
-                <li><a href=
-                    "http://code.google.com/p/ctex-kit/wiki/SimpleChineseTemplates">ctex-kit
-                    各种工具链下最简单的中文文档模板</a></li>
+                <li>中文相关
 
-                <li><a href=
-                    "http://yihui.name/cn/2010/02/misc-issues-in-latex-lyx-r-sweave-pgfsweave/">
-                    关于LaTeX+LyX+R/Sweave+pgfSweave+PDF图形的若干中文问题 | 谢益辉</a></li>
+                    <ol>
+                        <li><a href=
+                        "http://code.google.com/p/ctex-kit/wiki/SimpleChineseTemplates">
+                        ctex-kit 各种工具链下最简单的中文文档模板</a></li>
+
+                        <li><a href=
+                        "http://yihui.name/cn/2010/02/misc-issues-in-latex-lyx-r-sweave-pgfsweave/">
+                        关于LaTeX+LyX+R/Sweave+pgfSweave+PDF图形的若干中文问题 |
+                        谢益辉</a></li>
+                    </ol>
+                </li>
+
+                <li>命令帮助
+
+                    <ol>
+                        <li><a href=
+                        "http://www.ctex.org/documents/latex/latex2e-html/ltx-2.html">
+                        Help On LaTeX Commands</a></li>
+                    </ol>
+                </li>
+
+                <li>数学
+
+                    <ol>
+                        <li><a href=
+                        "http://blog.sina.com.cn/s/blog_61403f080100ej8t.html">
+                        latex帮助 （显示数学公式）_老李_新浪博客</a></li>
+                    </ol>
+                </li>
+
+                <li>宏包
+
+                    <ol>
+                        <li><a href=
+                        "http://ece.uwaterloo.ca/~aplevich/Circuit_macros/html/examples.html">
+                        Circuit_macro examples</a></li>
+                    </ol>
+                </li>
+
+                <li>幻灯片
+
+                    <ol>
+                        <li><a href=
+                        "http://dsec.pku.edu.cn/~yuhj/wiki/TeXSlides.html">做幻灯片(Slide)的建议</a></li>
+                    </ol>
+                </li>
+
+                <li>画图，插图
+
+                    <ol>
+                        <li><a href=
+                        "http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html">
+                        Metapost : exemples</a></li>
+
+                        <li><a href=
+                        "http://www.reimeika.ca/marco/prettyplots/">Making
+                        plots using Octave, gnuplot, and LaTeX</a></li>
+
+                        <li><a href=
+                        "http://www.ctex.org/documents/latex/graphics/">LATEX2e
+                        插图指南 王磊</a></li>
+                    </ol>
+                </li>
+
+                <li>Misc 杂项
+
+                    <ol>
+                        <li><a href=
+                        "http://www.codecogs.com/latex/eqneditor.php">Online
+                        LaTeX Equation Editor</a></li>
+
+                        <li><a href=
+                        "http://www.aaronbraver.com/TeXTabTool.html">Tabular
+                        Generator</a></li>
+
+                        <li><a href=
+                        "http://detexify.kirelabs.org/classify.html">Detexify
+                        LaTeX handwritten symbol recognition</a></li>
+                    </ol>
+                </li>
             </ol>
-            </li>
-            <li>命令帮助
-            <ol>
-                <li><a href="http://www.ctex.org/documents/latex/latex2e-html/ltx-2.html">Help On LaTeX Commands</a></li>
-            </ol>
-            </li>
-            <li>数学
-            <ol>
-                <li><a href=
-                    "http://blog.sina.com.cn/s/blog_61403f080100ej8t.html">latex帮助
-                    （显示数学公式）_老李_新浪博客</a></li>
-            </ol>
-            </li>
-
-            <li>宏包
-            <ol>
-                <li><a href="http://ece.uwaterloo.ca/~aplevich/Circuit_macros/html/examples.html">Circuit_macro examples</a></li>
-            </ol>
-            </li>
-
-            <li>幻灯片
-            <ol>
-                <li><a href=
-                    "http://dsec.pku.edu.cn/~yuhj/wiki/TeXSlides.html">
-                    做幻灯片(Slide)的建议</a></li>
-            </ol>
-            </li>
-
-            <li>画图，插图
-            <ol>
-                <li><a href="http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html">Metapost : exemples</a></li>
-
-                <li><a href="http://www.reimeika.ca/marco/prettyplots/">Making plots using Octave, gnuplot, and LaTeX</a></li>
-                <li><a href="http://www.ctex.org/documents/latex/graphics/">LATEX2e 插图指南 王磊</a></li>
-            </ol>
-            </li>
-
-            <li>Misc 杂项
-            <ol>
-                <li><a href="http://www.codecogs.com/latex/eqneditor.php">Online
-                    LaTeX Equation Editor</a></li>
-
-                <li><a href="http://www.aaronbraver.com/TeXTabTool.html">Tabular
-                    Generator</a></li>
-
-                <li><a href="http://detexify.kirelabs.org/classify.html">Detexify LaTeX handwritten symbol recognition</a></li>
-            </ol>
-            </li>
-
-        </ol>
-        </div>
-    </div><!-- end of maincontent -->
+        </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <div class="tiny">
