--- a/html/fvwm.html
+++ b/html/fvwm.html
@@ -24,42 +24,57 @@
         </div>
     </div><!-- end of header -->
 
-    <div id="maincontent">
-        <div id="wecando">
-            <h2><a id="index" href="../index.html" class="focus" name=
-            "index">首页</a></h2>
-        </div><!-- end of wecando -->
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
 
-        <p>fvwm是一个高度可定制的窗口管理器。</p>
+            <li><a href="surfing.html">站点导航</a></li>
 
-        <p>下面是引自<a href=
-        "http://baike.baidu.com/view/316558.htm">百度百科</a>的介绍。</p>
+            <li><a href="resources.html" class="focus">文档资料</a></li>
 
-        <blockquote class="bubble">
-            　fvwm是一个X11的窗口管理器，设计理念为减少内存消耗，提供3D外观和虚拟桌面。FVWM是ICCCM兼容的，它的开发很活跃，支持也很优秀。FVWM是一种非常优秀的窗口管理器，一旦配置完成便可以长久使用。
-        </blockquote>
+            <li><a href="images.html">美图收藏</a></li>
 
-        <p>上面一段其实是fvwm的手册页(在终端使用命令man fvwm查看)中的介绍的中文翻译。</p>
+            <li><a href="music.html">OGG音乐</a></li>
 
-        <p>fvwm的配置全部在一个文本文件（也可分成多个）里。</p>
+            <li><a href="about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
 
-        <p>fvwm-theme给不愿意花费精力配置fvwm的人提供了若干配置好了的主题。fvwm-crystal
-        则提供了一些很漂亮的透明主题。</p>
+    <div id="maincontainer">
+        <div id="maincontent">
+            <p>fvwm是一个高度可定制的窗口管理器。</p>
 
-        <p>下面列出一些在线资料</p>
+            <p>下面是引自<a href=
+            "http://baike.baidu.com/view/316558.htm">百度百科</a>的介绍。</p>
 
-        <ol>
-            <li><a href=
-            "http://www.linuxdiyf.com/bbs/viewthread.php?tid=172831">我的一篇入门贴</a></li>
+            <blockquote class="bubble">
+                　fvwm是一个X11的窗口管理器，设计理念为减少内存消耗，提供3D外观和虚拟桌面。FVWM是ICCCM兼容的，它的开发很活跃，支持也很优秀。FVWM是一种非常优秀的窗口管理器，一旦配置完成便可以长久使用。
+            </blockquote>
 
-            <li><a href="http://www.linuxsir.org/bbs/thread216632.html">fvwm:
-            从入门到提高 - LinuxSir.Org</a></li>
+            <p>上面一段其实是fvwm的手册页(在终端使用命令man fvwm查看)中的介绍的中文翻译。</p>
 
-            <li><a href=
-            "http://www.lemote.com/bbs/redirect.php?goto=newpost&amp;tid=1248">
-            FVWM FAQ中文版[转] - 龙芯软件开发 - 龙芯论坛(loongson forum) - 龙芯官方论坛</a></li>
-        </ol>
-    </div><!-- end of maincontent -->
+            <p>fvwm的配置全部在一个文本文件（也可分成多个）里。</p>
+
+            <p>fvwm-theme给不愿意花费精力配置fvwm的人提供了若干配置好了的主题。fvwm-crystal
+            则提供了一些很漂亮的透明主题。</p>
+
+            <p>下面列出一些在线资料</p>
+
+            <ol>
+                <li><a href=
+                "http://www.linuxdiyf.com/bbs/viewthread.php?tid=172831">我的一篇入门贴</a></li>
+
+                <li><a href=
+                "http://www.linuxsir.org/bbs/thread216632.html">fvwm: 从入门到提高
+                - LinuxSir.Org</a></li>
+
+                <li><a href=
+                "http://www.lemote.com/bbs/redirect.php?goto=newpost&amp;tid=1248">
+                FVWM FAQ中文版[转] - 龙芯软件开发 - 龙芯论坛(loongson forum) -
+                龙芯官方论坛</a></li>
+            </ol>
+        </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <p>与我联系：<a href="mailto:alick9188@163.com">邮箱</a></p>
