--- a/html/spice.html
+++ b/html/spice.html
@@ -16,39 +16,49 @@
 
 <body>
     <div id="header">
-
         <div id="sitebranding">
             <h1>SPICE电路仿真工具</h1>
         </div>
 
         <div id="tagline">
-            <p><strong>Simulation Program with Integrated Circuit Emphasis</strong></p>
+            <p><strong>Simulation Program with Integrated Circuit
+            Emphasis</strong></p>
         </div>
-
     </div><!-- end of header -->
 
-    <div id="maincontent">
-        <div id="wecando" class="shadow">
-            <h2><a href="../index.html" class="focus">首页</a>
-                <a href="../html/surfing.html">站点导航</a>
-                <a href="../html/resources.html">文档资料</a>
-                <a href="../html/images.html">美图收藏</a>
-                <a href="../html/music.html">OGG音乐</a>
-                <a href="../html/about.html">关于</a>
-            </h2>
-        </div><!-- end of wecando -->
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
 
-        <p>SPICE</p>
-        <p>Online resources:</p>
-        <ol>
-            <li><a href=
-                "http://www.brorson.com.sixxs.org/gEDA/SPICE/t1.html">
-                gEDA and SPICE HOWTO</a></li>
-            <li><a href=
+            <li><a href="surfing.html">站点导航</a></li>
+
+            <li><a href="resources.html" class="focus">文档资料</a></li>
+
+            <li><a href="images.html">美图收藏</a></li>
+
+            <li><a href="music.html">OGG音乐</a></li>
+
+            <li><a href="about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
+
+    <div id="maincontainer">
+        <div id="maincontent">
+            <p>SPICE</p>
+
+            <p>Online resources:</p>
+
+            <ol>
+                <li><a href=
+                "http://www.brorson.com.sixxs.org/gEDA/SPICE/t1.html">gEDA
+                and SPICE HOWTO</a></li>
+
+                <li><a href=
                 "http://newton.ex.ac.uk/teaching/CDHW/Electronics2/userguide/index.html">
                 SPICE 3 User's Manual</a></li>
-        </ol>
-    </div><!-- end of maincontent -->
+            </ol>
+        </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <div class="tiny">
@@ -62,13 +72,10 @@
             "http://creativecommons.org/licenses/by-sa/2.5/cn/"><img alt=
             "Creative Commons License" style="border-width:0" src=
             "../img/80x15.png" /></a><br />
-
             本作品采用<a rel="license" href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/">知识共享署名-相同方式共享
             2.5 中国大陆许可协议</a>进行许可。</p>
         </div>
     </div><!-- end of bottom div -->
-
 </body>
 </html>
-
