--- a/html/surfing.html
+++ b/html/surfing.html
@@ -15,9 +15,12 @@
 </script>
     <script type="text/javascript" src="../js/multiSearch.js">
 </script>
-    <script type="text/javascript" src="../js/lunar1.js"></script>
-    <script type="text/javascript" src="../js/jquery.js"></script>
-    <script type="text/javascript" src="../js/kbdshortcuts.js"></script>
+    <script type="text/javascript" src="../js/lunar1.js">
+</script>
+    <script type="text/javascript" src="../js/jquery.js">
+</script>
+    <script type="text/javascript" src="../js/kbdshortcuts.js">
+</script>
 </head>
 
 <body>
@@ -36,95 +39,100 @@
     <div id="wecando" class="shadow">
         <ul>
             <li><a href="../index.html">首页</a></li>
+
             <li><a href="#surfing" class="focus">站点导航</a></li>
+
             <li><a href="resources.html">文档资料</a></li>
+
             <li><a href="images.html">美图收藏</a></li>
+
             <li><a href="music.html">OGG音乐</a></li>
+
             <li><a href="about.html">关于</a></li>
         </ul>
     </div><!-- end of wecando -->
 
     <div id="maincontainer">
-    <div id="sidebar">
-        <div id="timer">
-            <!-- show current time -->
-        </div>
-
-        <div id="search">
-            <!-- SiteSearch Google copyed from Google but modified-->
-
-            <form method="get" id="form1" action=
-            "http://www.google.com.hk/search">
-                <fieldset>
-                    <input type="hidden" name="ie" value="UTF-8" />
-                    <input type="hidden" name="oe" value="UTF-8" />
-                    <abbr title="用google.com.hk搜索"><input type="text" name=
-                    "q" size="20" maxlength="255" value="" /></abbr> 
-                    <!--<input type="radio" name="sitesearch" value="http://learn.tsinghua.edu.cn:8080/" /><span class="fun">tsinghuaren</span>-->
-                     <select id="select">
-                        <option selected="selected" value="0">
-                            google.com.hk
-                        </option>
-                        <option value="1">
-                            google.com
-                        </option>
-                    </select> <input type="submit" name="btnG" value="Go"
-                    onclick="multi_search()" />
-                </fieldset>
-            </form>
-        </div><!-- end of search div -->
-    </div><!-- end of sidebar -->
-
-    <div id="maincontent">
-        <div id="surfing" class="surfing">
-
-            <div class="siteclass">
-                <span class="siteclassname">学习</span>
-                <a href="http://info.tsinghua.edu.cn/index.jsp">信息门户</a>
-                <a href="http://mirrors.tuna.tsinghua.edu.cn/">开源镜像站</a>
+        <div id="sidebar">
+            <div id="timer">
+                <!-- show current time -->
             </div>
 
-            <div class="siteclass">
-                <span class="siteclassname">搜索</span>
-                <a href="https://www.google.com">Google</a>
-                <a href="http://www.baidu.com/">Baidu</a>
-            </div>
+            <div id="search">
+                <!-- SiteSearch Google copyed from Google but modified-->
 
-            <div class="siteclass">
-                <span class="siteclassname">论坛</span>
-                <a href="http://www.linuxdiyf.com/bbs">红联BBS</a>
-                <a href="http://www.newsmth.net/">水木社区</a>
-                <a href="http://thuee.net/">FREE</a>
-            </div>
+                <form method="get" id="form1" action=
+                "http://www.google.com.hk/search">
+                    <fieldset>
+                        <input type="hidden" name="ie" value="UTF-8" />
+                        <input type="hidden" name="oe" value="UTF-8" />
+                        <abbr title="用google.com.hk搜索"><input type="text"
+                        name="q" size="20" maxlength="255" value="" /></abbr>
+                        <!--<input type="radio" name="sitesearch" value="http://learn.tsinghua.edu.cn:8080/" /><span class="fun">tsinghuaren</span>-->
+                         <select id="select">
+                            <option selected="selected" value="0">
+                                google.com.hk
+                            </option>
 
-            <div class="siteclass">
-                <span class="siteclassname">空间</span>
-                <a href=
-                    "https://www.google.com/reader/view/?hl=zh-CN&amp;tab=wy">Google
-                    Reader</a>
-                <a href="http://passport.renren.com/PLogin.do">上校内</a>
-                <a href="http://weibo.com/alickzhao">sina 微博</a>
-            </div>
+                            <option value="1">
+                                google.com
+                            </option>
+                        </select> <input type="submit" name="btnG" value="Go"
+                        onclick="multi_search()" />
+                    </fieldset>
+                </form>
+            </div><!-- end of search div -->
+        </div><!-- end of sidebar -->
 
-            <div class="siteclass">
-                <span class="siteclassname">工具</span>
-                <a href="http://cgbt.cn/forums/viewthread.php?tid=237846">IPv6 电视电台</a>
-                <a href="huochepiao.html">火车票查询</a>
-                <a href="http://www.ip138.com/ips8.asp">IP 查询</a>
-                <a href="utils.html">更多</a>
-            </div>
+        <div id="maincontent">
+            <div id="surfing" class="surfing">
+                <div class="siteclass">
+                    <span class="siteclassname">学习</span> <a href=
+                    "http://info.tsinghua.edu.cn/index.jsp">信息门户</a> <a href=
+                    "http://mirrors.tuna.tsinghua.edu.cn/">开源镜像站</a>
+                </div>
 
-            <div class="siteclass">
-                <span class="siteclassname">友链</span>
-                <a href="http://learn.tsinghua.edu.cn:8080/2008011108/index.htm">王鹤达的个人主页</a>
-            </div>
+                <div class="siteclass">
+                    <span class="siteclassname">搜索</span> <a href=
+                    "https://www.google.com">Google</a> <a href=
+                    "http://www.baidu.com/">Baidu</a>
+                </div>
 
-            <div class="siteclass">
-                <span class="siteclassname">认证</span>
-                <a href="https://auth-1.ccert.edu.cn:8443/eportal/index.jsp?s=e070690f5e1345db642039e328afb748&amp;mac=f7d97f9e764d075e60a8e653dacc388f&amp;vid=e3cbc67d63369647&amp;port=946dc6803fa4b835&amp;url=883dfa24377e48c91a6998b0929594e035ae3f8b51df504b2cd1a1a5b7e9cc3b680b8a92680054d9">IPv6 认证</a>
+                <div class="siteclass">
+                    <span class="siteclassname">论坛</span> <a href=
+                    "http://www.linuxdiyf.com/bbs">红联BBS</a> <a href=
+                    "http://www.newsmth.net/">水木社区</a> <a href=
+                    "http://thuee.net/">FREE</a>
+                </div>
+
+                <div class="siteclass">
+                    <span class="siteclassname">空间</span> <a href=
+                    "https://www.google.com/reader/view/?hl=zh-CN&amp;tab=wy">
+                    Google Reader</a> <a href=
+                    "http://passport.renren.com/PLogin.do">上校内</a> <a href=
+                    "http://weibo.com/alickzhao">sina 微博</a>
+                </div>
+
+                <div class="siteclass">
+                    <span class="siteclassname">工具</span> <a href=
+                    "http://cgbt.cn/forums/viewthread.php?tid=237846">IPv6
+                    电视电台</a> <a href="huochepiao.html">火车票查询</a> <a href=
+                    "http://www.ip138.com/ips8.asp">IP 查询</a> <a href=
+                    "utils.html">更多</a>
+                </div>
+
+                <div class="siteclass">
+                    <span class="siteclassname">友链</span> <a href=
+                    "http://learn.tsinghua.edu.cn:8080/2008011108/index.htm">王鹤达的个人主页</a>
+                </div>
+
+                <div class="siteclass">
+                    <span class="siteclassname">认证</span> <a href=
+                    "https://auth-1.ccert.edu.cn:8443/eportal/index.jsp?s=e070690f5e1345db642039e328afb748&amp;mac=f7d97f9e764d075e60a8e653dacc388f&amp;vid=e3cbc67d63369647&amp;port=946dc6803fa4b835&amp;url=883dfa24377e48c91a6998b0929594e035ae3f8b51df504b2cd1a1a5b7e9cc3b680b8a92680054d9">
+                    IPv6 认证</a>
+                </div>
             </div>
-        </div>
-    </div><!-- end of maincontent -->
+        </div><!-- end of maincontent -->
     </div><!-- end of maincontainer -->
 
     <div id="bottom">
