--- a/html/unicode.html
+++ b/html/unicode.html
@@ -16,7 +16,6 @@
 
 <body>
     <div id="header">
-
         <div id="sitebranding">
             <h1>Unicode</h1>
         </div>
@@ -24,33 +23,42 @@
         <div id="tagline">
             <p><strong>☃☺</strong></p>
         </div>
-
     </div><!-- end of header -->
 
-    <div id="maincontent">
-        <div id="wecando" class="shadow">
-            <ul>
-                <li><a href="../index.html" class="focus">首页</a></li>
-                <li><a href="../html/surfing.html">站点导航</a></li>
-                <li><a href="resources.html">文档资料</a></li>
-                <li><a href="images.html">美图收藏</a></li>
-                <li><a href="music.html">OGG音乐</a></li>
-                <li><a href="about.html">关于</a></li>
-            </ul>
-        </div><!-- end of wecando -->
+    <div id="wecando" class="shadow">
+        <ul>
+            <li><a href="../index.html">首页</a></li>
 
-        <p>参考在线资源：</p>
+            <li><a href="surfing.html">站点导航</a></li>
 
-        <ol>
-            <li><a href="http://msdn.microsoft.com/en-us/library/xwy0e8f2(VS.80).aspx">Unicode Support in the Compiler and Linker</a></li>
+            <li><a href="resources.html" class="focus">文档资料</a></li>
 
-            <li><a href="http://www.vckbase.com/document/viewdoc/?id=1733">VC++的Unicode编程</a></li>
+            <li><a href="images.html">美图收藏</a></li>
 
-            <li><a href="http://www.vckbase.com/document/viewdoc/?id=642">UNICODE 编程入门</a></li>
+            <li><a href="music.html">OGG音乐</a></li>
 
-        </ol>
+            <li><a href="about.html">关于</a></li>
+        </ul>
+    </div><!-- end of wecando -->
 
-    </div><!-- end of maincontent -->
+    <div id="maincontainer">
+        <div id="maincontent">
+            <p>参考在线资源：</p>
+
+            <ol>
+                <li><a href=
+                "http://msdn.microsoft.com/en-us/library/xwy0e8f2(VS.80).aspx">
+                Unicode Support in the Compiler and Linker</a></li>
+
+                <li><a href=
+                "http://www.vckbase.com/document/viewdoc/?id=1733">VC++的Unicode编程</a></li>
+
+                <li><a href=
+                "http://www.vckbase.com/document/viewdoc/?id=642">UNICODE
+                编程入门</a></li>
+            </ol>
+        </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <div class="tiny">
@@ -64,13 +72,10 @@
             "http://creativecommons.org/licenses/by-sa/2.5/cn/"><img alt=
             "Creative Commons License" style="border-width:0" src=
             "../img/80x15.png" /></a><br />
-
             本作品采用<a rel="license" href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/">知识共享署名-相同方式共享
             2.5 中国大陆许可协议</a>进行许可。</p>
         </div>
     </div><!-- end of bottom div -->
-
 </body>
 </html>
-
