--- a/html/utils.html
+++ b/html/utils.html
@@ -16,7 +16,6 @@
 
 <body>
     <div id="header">
-
         <div id="sitebranding">
             <h1>实用工具</h1>
         </div>
@@ -24,31 +23,41 @@
         <div id="tagline">
             <p><strong>使生活更简单</strong></p>
         </div>
-
     </div><!-- end of header -->
 
-    <div id="maincontent">
-        <div id="wecando" class="shadow">
-            <h2><a href="../index.html" class="focus">首页</a>
-                <a href="../html/surfing.html">站点导航</a>
-                <a href="../html/resources.html">文档资料</a>
-                <a href="../html/images.html">美图收藏</a>
-                <a href="../html/music.html">OGG音乐</a>
-                <a href="../html/about.html">关于</a>
-            </h2>
-        </div><!-- end of wecando -->
-
+    <div id="wecando" class="shadow">
         <ul>
-            <li><a href="http://www.poptool.net/enet/mp3_lrc/">LRC歌词
-            </a></li>
-            <li><a href="calcu_constellation_zodiac.html">星座属相计算器
-            </a></li>
-            <li><a href="http://xh.5156edu.com/conversion.html">汉字转拼音
-                （带音调）</a></li>
-            <li><a href="http://xh.5156edu.com/jtof.php">汉字简体繁体转换
-            </a></li>
+            <li><a href="../index.html">首页</a></li>
+
+            <li><a href="surfing.html">站点导航</a></li>
+
+            <li><a href="resources.html" class="focus">文档资料</a></li>
+
+            <li><a href="images.html">美图收藏</a></li>
+
+            <li><a href="music.html">OGG音乐</a></li>
+
+            <li><a href="about.html">关于</a></li>
         </ul>
-    </div><!-- end of maincontent -->
+    </div><!-- end of wecando -->
+
+    <div id="maincontainer">
+        <div id="maincontent">
+            <ul>
+                <li><a href=
+                "http://www.poptool.net/enet/mp3_lrc/">LRC歌词</a></li>
+
+                <li><a href=
+                "calcu_constellation_zodiac.html">星座属相计算器</a></li>
+
+                <li><a href="http://xh.5156edu.com/conversion.html">汉字转拼音
+                （带音调）</a></li>
+
+                <li><a href=
+                "http://xh.5156edu.com/jtof.php">汉字简体繁体转换</a></li>
+            </ul>
+        </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <div class="tiny">
@@ -62,13 +71,10 @@
             "http://creativecommons.org/licenses/by-sa/2.5/cn/"><img alt=
             "Creative Commons License" style="border-width:0" src=
             "../img/80x15.png" /></a><br />
-
             本作品采用<a rel="license" href=
             "http://creativecommons.org/licenses/by-sa/2.5/cn/">知识共享署名-相同方式共享
             2.5 中国大陆许可协议</a>进行许可。</p>
         </div>
     </div><!-- end of bottom div -->
-
 </body>
 </html>
-
