--- a/html/vim.html
+++ b/html/vim.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="../css/style1.css" rel="stylesheet" type="text/css" />
     <!--<script type="text/javascript" src="../js/">-->
-        <!--</script>-->
+    <!--</script>-->
 </head>
 
 <body>
@@ -24,55 +24,69 @@
         </div>
     </div><!-- end of header -->
 
-    <div id="maincontent">
-        <div id="wecando" class="shadow">
-            <ul>
-                <li><a id="index" href="../index.html" name=
-                "index">首页</a></li>
-                <li><a href="resources.html" >文档首页</a></li>
-            </ul>
-        </div><!-- end of wecando -->
-
-        <p>VIM是一个功能强大的文本编辑器。</p>
-
-        <p>
-        VIM还被称为“程序员的编辑器”，支持众多文本文件的高亮显示。可以在VIM里面编辑编译程序，编译错误可以自动定位。效率绝不亚于一个“IDE”。</p>
-
-        <p>下面是引自<a href=
-        "http://zh.wikipedia.org/wiki/Vi_IMproved">维基百科</a>的介绍。</p>
-
-        <blockquote class="bubble">
-            Vim是从vi发展出来的一个文本编辑器。代码补完、编译及错误跳转等方便编程的功能特别丰富，在程序员中被广泛使用。和Emacs并列成为类Unix系统用户最喜欢的编辑器。
-            Vim的第一个版本由Bram Moolenaar在1991年发布。最初的简称是Vi
-            IMitation，随着功能的不断增加，正式名称改成了Vi IMproved。现在是在开放源代码方式下发行的自由软件。
-        </blockquote>
-
-        <blockquote class="bubble">
-            对于大多数用户来说，Vim有着一个比较陡峭的学习曲线。这意味着开始学习的时候可能会进展缓慢，但是一旦掌握一些基本操作之后，能大幅度提高编辑效率。为了帮助学习，Vim为初学者准备了Vim教学。通常可以在Unix系统命令行下输入"vimtutor"或者点击Windows系统桌面上的Vim教学图标进入。在Vim用户手册
-            中更加详细的描述了Vim的基础和进阶功能。可以在Vim中输入":help
-            user-manual"进入用户手册。手册除了原始的英文版本之外，也被志愿者翻译成了各国文字，也包括了中文。
-            新用户也应该学习Vim的帮助系统。可以在Vim中输入不带参数的"help"来阅读主帮助文件。
-        </blockquote>
-
-        <p>下面列出一些在线资料</p>
-
-        <ol>
-            <li><a href=
-            "http://www.linux-wiki.cn/index.php/VI(VIM)%E7%BC%96%E5%86%99%E7%A8%8B%E5%BA%8F%E6%8A%80%E5%B7%A7">
-            VI(VIM)编写程序技巧 - Linux Wiki</a></li>
-
-            <li><a href=
-            "http://linuxtoy.org/archives/vim_7_new_features.html">细说 Vim 7
-            之新特性 — LinuxTOY</a></li>
-        </ol>
-
-        <p>下面是一些 Vim 插件的链接：</p>
+    <div id="wecando" class="shadow">
         <ul>
-            <li><a href="http://vimim.googlecode.com/svn/vimim/vimim.html">
-                Vimim(Vim 中文输入法)</a></li>
-            <li><a href="http://vim-latex.sourceforge.net/index.php">Vim-LaTeX</a></li>
+            <li><a href="../index.html">首页</a></li>
+
+            <li><a href="surfing.html">站点导航</a></li>
+
+            <li><a href="resources.html" class="focus">文档资料</a></li>
+
+            <li><a href="images.html">美图收藏</a></li>
+
+            <li><a href="music.html">OGG音乐</a></li>
+
+            <li><a href="about.html">关于</a></li>
         </ul>
-    </div><!-- end of maincontent -->
+    </div><!-- end of wecando -->
+
+    <div id="maincontainer">
+        <div id="maincontent">
+            <p>VIM是一个功能强大的文本编辑器。</p>
+
+            <p>
+            VIM还被称为“程序员的编辑器”，支持众多文本文件的高亮显示。可以在VIM里面编辑编译程序，编译错误可以自动定位。效率绝不亚于一个“IDE”。</p>
+
+            <p>下面是引自<a href=
+            "http://zh.wikipedia.org/wiki/Vi_IMproved">维基百科</a>的介绍。</p>
+
+            <blockquote class="bubble">
+                Vim是从vi发展出来的一个文本编辑器。代码补完、编译及错误跳转等方便编程的功能特别丰富，在程序员中被广泛使用。和Emacs并列成为类Unix系统用户最喜欢的编辑器。
+                Vim的第一个版本由Bram Moolenaar在1991年发布。最初的简称是Vi
+                IMitation，随着功能的不断增加，正式名称改成了Vi IMproved。现在是在开放源代码方式下发行的自由软件。
+            </blockquote>
+
+            <blockquote class="bubble">
+                对于大多数用户来说，Vim有着一个比较陡峭的学习曲线。这意味着开始学习的时候可能会进展缓慢，但是一旦掌握一些基本操作之后，能大幅度提高编辑效率。为了帮助学习，Vim为初学者准备了Vim教学。通常可以在Unix系统命令行下输入"vimtutor"或者点击Windows系统桌面上的Vim教学图标进入。在Vim用户手册
+                中更加详细的描述了Vim的基础和进阶功能。可以在Vim中输入":help
+                user-manual"进入用户手册。手册除了原始的英文版本之外，也被志愿者翻译成了各国文字，也包括了中文。
+                新用户也应该学习Vim的帮助系统。可以在Vim中输入不带参数的"help"来阅读主帮助文件。
+            </blockquote>
+
+            <p>下面列出一些在线资料</p>
+
+            <ol>
+                <li><a href=
+                "http://www.linux-wiki.cn/index.php/VI(VIM)%E7%BC%96%E5%86%99%E7%A8%8B%E5%BA%8F%E6%8A%80%E5%B7%A7">
+                VI(VIM)编写程序技巧 - Linux Wiki</a></li>
+
+                <li><a href=
+                "http://linuxtoy.org/archives/vim_7_new_features.html">细说 Vim
+                7 之新特性 — LinuxTOY</a></li>
+            </ol>
+
+            <p>下面是一些 Vim 插件的链接：</p>
+
+            <ul>
+                <li><a href=
+                "http://vimim.googlecode.com/svn/vimim/vimim.html">Vimim(Vim
+                中文输入法)</a></li>
+
+                <li><a href=
+                "http://vim-latex.sourceforge.net/index.php">Vim-LaTeX</a></li>
+            </ul>
+        </div><!-- end of maincontent -->
+    </div><!-- end of maincontainer div -->
 
     <div id="bottom">
         <p>与我联系：<a href="mailto:alick9188@163.com">邮箱</a></p>
